--- a/data/presets.yaml
+++ b/data/presets.yaml
@@ -1149,6 +1149,12 @@ en:
       historic/wayside_shrine: 
         name: Wayside Shrine
         terms: "<translate with synonyms or related terms for 'Wayside Shrine', separated by commas>"
+      kta/puits_a_echelons: 
+        name: Puits à échelons
+        terms: "<translate with synonyms or related terms for 'Puits à échelons', separated by commas>"
+      kta/puits_sans_echelons: 
+        name: Puits sans échelons
+        terms: "<translate with synonyms or related terms for 'Puits sans échelons', separated by commas>"
       landuse: 
         name: Landuse
         terms: "<translate with synonyms or related terms for 'Landuse', separated by commas>"
